# StockMixer

./: README.md  pyproject.toml
src/stockmixer/: __init__.py  evaluator.py  model.py  train.py
